@@ -68,6 +68,7 @@ class PageGameStats : public AbstractPage
 
         QMap<qint32, QVector<qint32> > healthPoints;
         unsigned int playerPosition;
+        unsigned int scriptPlayerPosition;
         quint32 lastColor;
         bool defaultGraphTitle;
         QScopedPointer<QGraphicsScene> m_scene;
